--- a/testing_codelab/codelab_rebuild.yaml
+++ b/testing_codelab/codelab_rebuild.yaml
@@ -66,6 +66,9 @@ steps:
            import 'package:flutter/material.dart';
            
            void main() {
+      - name: Format lib/main.dart
+        path: testing_app
+        dart: format lib/main.dart
       - name: Copy step_03
         copydir:
           from: testing_app
@@ -121,9 +124,7 @@ steps:
                 child: MaterialApp.router(
                   title: 'Testing Sample',
                   theme: ThemeData(
-                    colorScheme: ColorScheme.fromSeed(
-                      seedColor: Colors.deepPurple,
-                    ),
+                    colorScheme: ColorScheme.fromSeed(seedColor: Colors.deepPurple),
                     useMaterial3: true,
                   ),
                   routerConfig: _router,
@@ -168,39 +169,39 @@ steps:
           // Copyright 2020 The Flutter Authors. All rights reserved.
           // Use of this source code is governed by a BSD-style license that can be
           // found in the LICENSE file.
-          
+
           import 'package:flutter/material.dart';
           import 'package:provider/provider.dart';
-          
+
           import '../models/favorites.dart';
-          
+
           class FavoritesPage extends StatelessWidget {
             const FavoritesPage({super.key});
-          
+
             static String routeName = 'favorites_page';
-          
+
             @override
             Widget build(BuildContext context) {
               return Scaffold(
-                appBar: AppBar(
-                  title: const Text('Favorites'),
-                ),
+                appBar: AppBar(title: const Text('Favorites')),
                 body: Consumer<Favorites>(
-                  builder: (context, value, child) => ListView.builder(
-                    itemCount: value.items.length,
-                    padding: const EdgeInsets.symmetric(vertical: 16),
-                    itemBuilder: (context, index) => FavoriteItemTile(value.items[index]),
-                  ),
+                  builder:
+                      (context, value, child) => ListView.builder(
+                        itemCount: value.items.length,
+                        padding: const EdgeInsets.symmetric(vertical: 16),
+                        itemBuilder:
+                            (context, index) => FavoriteItemTile(value.items[index]),
+                      ),
                 ),
               );
             }
           }
-          
+
           class FavoriteItemTile extends StatelessWidget {
             const FavoriteItemTile(this.itemNo, {super.key});
-          
+
             final int itemNo;
-          
+
             @override
             Widget build(BuildContext context) {
               return Padding(
@@ -209,10 +210,7 @@ steps:
                   leading: CircleAvatar(
                     backgroundColor: Colors.primaries[itemNo % Colors.primaries.length],
                   ),
-                  title: Text(
-                    'Item $itemNo',
-                    key: Key('favorites_text_$itemNo'),
-                  ),
+                  title: Text('Item $itemNo', key: Key('favorites_text_$itemNo')),
                   trailing: IconButton(
                     key: Key('remove_icon_$itemNo'),
                     icon: const Icon(Icons.close),
@@ -236,18 +234,18 @@ steps:
           // Copyright 2020 The Flutter Authors. All rights reserved.
           // Use of this source code is governed by a BSD-style license that can be
           // found in the LICENSE file.
-          
+
           import 'package:flutter/material.dart';
           import 'package:go_router/go_router.dart';
           import 'package:provider/provider.dart';
           import '../models/favorites.dart';
           import 'favorites.dart';
-          
+
           class HomePage extends StatelessWidget {
             static String routeName = '/';
-          
+
             const HomePage({super.key});
-          
+
             @override
             Widget build(BuildContext context) {
               return Scaffold(
@@ -272,40 +270,40 @@ steps:
               );
             }
           }
-          
+
           class ItemTile extends StatelessWidget {
             final int itemNo;
-          
+
             const ItemTile(this.itemNo, {super.key});
-          
+
             @override
             Widget build(BuildContext context) {
               var favoritesList = Provider.of<Favorites>(context);
-          
+
               return Padding(
                 padding: const EdgeInsets.all(8.0),
                 child: ListTile(
                   leading: CircleAvatar(
                     backgroundColor: Colors.primaries[itemNo % Colors.primaries.length],
                   ),
-                  title: Text(
-                    'Item $itemNo',
-                    key: Key('text_$itemNo'),
-                  ),
+                  title: Text('Item $itemNo', key: Key('text_$itemNo')),
                   trailing: IconButton(
                     key: Key('icon_$itemNo'),
-                    icon: favoritesList.items.contains(itemNo)
-                        ? const Icon(Icons.favorite)
-                        : const Icon(Icons.favorite_border),
+                    icon:
+                        favoritesList.items.contains(itemNo)
+                            ? const Icon(Icons.favorite)
+                            : const Icon(Icons.favorite_border),
                     onPressed: () {
                       !favoritesList.items.contains(itemNo)
                           ? favoritesList.add(itemNo)
                           : favoritesList.remove(itemNo);
                       ScaffoldMessenger.of(context).showSnackBar(
                         SnackBar(
-                          content: Text(favoritesList.items.contains(itemNo)
-                              ? 'Added to favorites.'
-                              : 'Removed from favorites.'),
+                          content: Text(
+                            favoritesList.items.contains(itemNo)
+                                ? 'Added to favorites.'
+                                : 'Removed from favorites.',
+                          ),
                           duration: const Duration(seconds: 1),
                         ),
                       );
@@ -413,14 +411,12 @@ steps:
           late Favorites favoritesList;
 
           Widget createFavoritesScreen() => ChangeNotifierProvider<Favorites>(
-                create: (context) {
-                  favoritesList = Favorites();
-                  return favoritesList;
-                },
-                child: const MaterialApp(
-                  home: FavoritesPage(),
-                ),
-              );
+            create: (context) {
+              favoritesList = Favorites();
+              return favoritesList;
+            },
+            child: const MaterialApp(home: FavoritesPage()),
+          );
 
           void addItems() {
             for (var i = 0; i < 10; i += 2) {
@@ -444,8 +440,10 @@ steps:
                 var totalItems = tester.widgetList(find.byIcon(Icons.close)).length;
                 await tester.tap(find.byIcon(Icons.close).first);
                 await tester.pumpAndSettle();
-                expect(tester.widgetList(find.byIcon(Icons.close)).length,
-                    lessThan(totalItems));
+                expect(
+                  tester.widgetList(find.byIcon(Icons.close)).length,
+                  lessThan(totalItems),
+                );
                 expect(find.text('Removed from favorites.'), findsOneWidget);
               });
             });
@@ -456,39 +454,33 @@ steps:
           // Copyright 2020 The Flutter Authors. All rights reserved.
           // Use of this source code is governed by a BSD-style license that can be
           // found in the LICENSE file.
-          
+
           import 'package:flutter/material.dart';
           import 'package:flutter_test/flutter_test.dart';
           import 'package:provider/provider.dart';
           import 'package:testing_app/models/favorites.dart';
           import 'package:testing_app/screens/home.dart';
-          
+
           Widget createHomeScreen() => ChangeNotifierProvider<Favorites>(
-                create: (context) => Favorites(),
-                child: const MaterialApp(
-                  home: HomePage(),
-                ),
-              );
-          
+            create: (context) => Favorites(),
+            child: const MaterialApp(home: HomePage()),
+          );
+
           void main() {
             group('Home Page Widget Tests', () {
               testWidgets('Testing if ListView shows up', (tester) async {
                 await tester.pumpWidget(createHomeScreen());
                 expect(find.byType(ListView), findsOneWidget);
               });
-          
+
               testWidgets('Testing Scrolling', (tester) async {
                 await tester.pumpWidget(createHomeScreen());
                 expect(find.text('Item 0'), findsOneWidget);
-                await tester.fling(
-                  find.byType(ListView),
-                  const Offset(0, -200),
-                  3000,
-                );
+                await tester.fling(find.byType(ListView), const Offset(0, -200), 3000);
                 await tester.pumpAndSettle();
                 expect(find.text('Item 0'), findsNothing);
               });
-          
+
               testWidgets('Testing IconButtons', (tester) async {
                 await tester.pumpWidget(createHomeScreen());
                 expect(find.byIcon(Icons.favorite), findsNothing);
@@ -526,42 +518,38 @@ steps:
           // Copyright 2021 The Flutter Authors. All rights reserved.
           // Use of this source code is governed by a BSD-style license that can be
           // found in the LICENSE file.
-          
+
           import 'package:flutter/material.dart';
           import 'package:flutter_test/flutter_test.dart';
           import 'package:testing_app/main.dart';
-          
+
           void main() {
             group('Testing App', () {
               testWidgets('Favorites operations test', (tester) async {
                 await tester.pumpWidget(const TestingApp());
-          
-                final iconKeys = [
-                  'icon_0',
-                  'icon_1',
-                  'icon_2',
-                ];
-          
+
+                final iconKeys = ['icon_0', 'icon_1', 'icon_2'];
+
                 for (var icon in iconKeys) {
                   await tester.tap(find.byKey(ValueKey(icon)));
                   await tester.pumpAndSettle(const Duration(seconds: 1));
-          
+
                   expect(find.text('Added to favorites.'), findsOneWidget);
                 }
-          
+
                 await tester.tap(find.text('Favorites'));
                 await tester.pumpAndSettle();
-          
+
                 final removeIconKeys = [
                   'remove_icon_0',
                   'remove_icon_1',
                   'remove_icon_2',
                 ];
-          
+
                 for (final iconKey in removeIconKeys) {
                   await tester.tap(find.byKey(ValueKey(iconKey)));
                   await tester.pumpAndSettle(const Duration(seconds: 1));
-          
+
                   expect(find.text('Removed from favorites.'), findsOneWidget);
                 }
               });
@@ -634,19 +622,20 @@ steps:
           // Copyright 2020 The Flutter Authors. All rights reserved.
           // Use of this source code is governed by a BSD-style license that can be
           // found in the LICENSE file.
-          
+
           import 'package:flutter_driver/flutter_driver.dart' as driver;
           import 'package:integration_test/integration_test_driver.dart';
-          
+
           Future<void> main() {
             return integrationDriver(
               responseDataCallback: (data) async {
                 if (data != null) {
                   final timeline = driver.Timeline.fromJson(
-                      data['scrolling_summary'] as Map<String, dynamic>);
-          
+                    data['scrolling_summary'] as Map<String, dynamic>,
+                  );
+
                   final summary = driver.TimelineSummary.summarize(timeline);
-          
+
                   await summary.writeTimelineToFile(
                     'scrolling_summary',
                     pretty: true,
